--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.5.7",
     "@astrojs/check": "^0.9.5",
     "@astrojs/mdx": "^4.3.8",
     "@astrojs/rss": "^4.0.12",
@@ -23,8 +24,11 @@
     "@tailwindcss/vite": "^4.1.16",
     "@types/three": "^0.180.0",
     "astro": "^5.15.0",
+    "astro-embed": "^0.9.1",
     "astro-pagefind": "^1.8.5",
     "clsx": "^2.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
